--- a/public/offline.html
+++ b/public/offline.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Offline - JDS App</title>
+  <title>Offline - Ask JDS by JD Simplified</title>
   <style>
     body {
       font-family: system-ui, -apple-system, sans-serif;
@@ -22,7 +22,7 @@
     h1 { color: #111827; margin-bottom: 1rem; }
     p { color: #6b7280; margin-bottom: 2rem; }
     button {
-      background-color: #2563eb;
+      background-color: #F37022;
       color: white;
       padding: 0.75rem 1.5rem;
       border-radius: 0.5rem;
@@ -30,7 +30,7 @@
       cursor: pointer;
       font-weight: 500;
     }
-    button:hover { background-color: #1d4ed8; }
+    button:hover { background-color: #E36012; }
   </style>
 </head>
 <body>
